<resources>
    <string name="app_name">BrewU</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>

    <string name="my_brews">My brews</string>
    <string name="all_brews">All brews</string>
    <string name="log_out">Log out</string>
    <string name="average_rating">Average rating</string>
    <string name="my_rating">My rating</string>
    <string name="see_brew_recipe">See brew recipe</string>
    <string name="SearchBrewTypeHint">Search Type or Creator</string>
    <string name="notificationTitle">Someone rated your brew</string>
    <string name="notificationText">has been rated. New average rating is:</string>
    <string name="TemperatureHint">Temperature:</string>
    <string name="timeHint">Time:</string>
    <string name="ChooseBeerTitle">Choose beer title</string>
    <string name="createBeerTitle">Create Brew Recipe</string>
    <string name="CreateBrewTypeHint">Type of beer</string>
    <string name="CreateBrewDescriptionHint">Write a description for brew</string>
    <string name="CreateBrewSave">Save Brew</string>
    <string name="title">Title</string>
    <string name="celsius" translatable="false">℃</string>
    <string name="minutes" translatable="false">min</string>
    <string name="placeholder" translatable="false">Placeholder</string>
    <string name="create_brew">Create Brew</string>
    <string name="brew_created">Your brew has been created</string>
</resources>
