<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
        android:id="@+id/menu_top">
        <item
            android:id="@+id/nav_myBrews"
            android:icon="@drawable/nav_mybrews"
            android:title="@string/my_brews" />
        <item
            android:id="@+id/nav_allBrews"
            android:icon="@drawable/nav_allbrews"
            android:title="@string/all_brews" />
        <item
            android:id="@+id/nav_createBrew"
            android:icon="@drawable/nav_create"
            android:title="@string/create_brew" />
    </group>
    <group
        android:id="@+id/menu_bottom">
        <item
            android:id="@+id/nav_logOut"
            android:icon="@drawable/nav_logout"
            android:title="@string/log_out"/>

    </group>
</menu>
