<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardViewCreate"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardCornerRadius="@dimen/activity_vertical_margin"
    app:cardElevation="@dimen/activity_vertical_margin">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/imageViewCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="16dp"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="16dp" />

        <TextView
            android:id="@+id/titleCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="10dp"
            android:layout_toRightOf="@+id/imageViewCreate"
            android:text="@string/title"
            android:textSize="30sp"
            android:layout_toEndOf="@+id/imageViewCreate" />

        <EditText
            android:id="@+id/descriptionCreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/titleCreate"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            android:layout_toRightOf="@+id/imageViewCreate"
            android:hint="@string/CreateBrewDescriptionHint"
            android:inputType="textMultiLine"
            android:layout_marginEnd="30dp"
            android:layout_toEndOf="@+id/imageViewCreate" />

        <TextView
            android:id="@+id/temperatureHintCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/descriptionCreate"
            android:layout_marginTop="20dp"
            android:layout_marginRight="5dp"
            android:layout_toRightOf="@+id/imageViewCreate"
            android:text="@string/TemperatureHint"
            android:textStyle="bold"
            android:layout_marginEnd="5dp"
            android:layout_toEndOf="@+id/imageViewCreate" />

        <EditText
            android:id="@+id/temperatureCreate"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/descriptionCreate"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_toRightOf="@+id/temperatureHintCreate"
            android:inputType="number"
            android:maxWidth="50dp"
            android:maxLength="5"
            android:maxLines="1"
            android:layout_toEndOf="@+id/temperatureHintCreate" />

        <TextView
            android:id="@+id/timeHintCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/descriptionCreate"
            android:layout_marginTop="20dp"
            android:layout_marginRight="5dp"
            android:layout_toRightOf="@+id/celsius"
            android:text="@string/timeHint"
            android:textStyle="bold"
            android:layout_marginEnd="5dp"
            android:layout_toEndOf="@+id/celsius" />

        <EditText
            android:id="@+id/timeCreate"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/descriptionCreate"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/timeHintCreate"
            android:inputType="number"
            android:maxWidth="50dp"
            android:maxLength="5"
            android:maxLines="1"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@+id/timeHintCreate" />

        <TextView
            android:id="@+id/celsius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/descriptionCreate"
            android:layout_marginTop="20dp"
            android:layout_marginRight="25dp"
            android:layout_toRightOf="@+id/temperatureCreate"
            android:text="@string/celsius"
            android:layout_marginEnd="25dp"
            android:layout_toEndOf="@+id/temperatureCreate" />

        <TextView
            android:id="@+id/minutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/descriptionCreate"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/timeCreate"
            android:text="@string/minutes"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@+id/timeCreate" />

    </RelativeLayout>

</android.support.v7.widget.CardView>